syntax = "proto3";

package yandex.cloud.priv.marketplace.licenseserver.v1.license.priv;

import "yandex/cloud/api/operation.proto";
import "yandex/cloud/priv/operation/operation.proto";
import "yandex/cloud/priv/validation.proto";
import "yandex/cloud/priv/marketplace/licenseserver/v1/license/template.proto";
import "yandex/cloud/priv/marketplace/licenseserver/v1/license/template_version.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/marketplace/licenseserver/v1/license/priv;priv";
option java_package = "PTVS";

service TemplateVersionService {
    rpc Get(GetTemplateVersionRequest) returns (TemplateVersion);
    rpc ListByTemplateID(ListTemplateVersionByTemplateIDRequest) returns (ListTemplateVersionResponse);

    rpc Update (UpdateTemplateVersionRequest) returns (operation.Operation) {
        option (yandex.cloud.api.operation) = {
            metadata: "UpdateTemplateVersionMetadata"
            response: "TemplateVersion"
        };
    }

    rpc Delete(DeleteTemplateVersionRequest) returns (operation.Operation) {
        option (yandex.cloud.api.operation) = {
            metadata: "DeleteTemplateVersionMetadata"
            response: "google.protobuf.Empty"
        };
    }

    rpc Apply(ApplyTemplateVersionRequest) returns (operation.Operation) {
        option (yandex.cloud.api.operation) = {
            metadata: "ApplyTemplateVersionMetadata"
            response: "ApplyTemplateVersionResponse"
        };
    }
}

message GetTemplateVersionRequest {
    string id = 1 [(required) = true];
}

message ListTemplateVersionByTemplateIDRequest {
    string template_id = 1 [(required) = true];
    int64 page_size = 4;
    string page_token = 5;
}

message UpdateTemplateVersionRequest {
    string id = 1 [(required) = true];
    string name = 2 [(required) = true];
    Price prices = 3 [(required) = true];
    string period = 4 [(required) = true];
}

message UpdateTemplateVersionMetadata {
    string template_version_id = 1;
}

message DeleteTemplateVersionRequest {
    string id = 1 [(required) = true];
}

message DeleteTemplateVersionMetadata {
    string template_version_id = 1 [(required) = true];
}

message ApplyTemplateVersionRequest {
    string id = 1 [(required) = true];
}

message ApplyTemplateVersionMetadata {
    string template_version_id = 1;
}

message ApplyTemplateVersionResponse {
    Template license_template = 1;
    TemplateVersion license_template_version = 2;
}
