syntax = "proto3";

package yandex.cloud.priv.marketplace.licenseserver.v1.license;

import "google/protobuf/timestamp.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/marketplace/licenseserver/v1/license;license";
option java_package = "LT";

message Price {
    map<string, string> currency_to_value = 1;
}

message TemplateVersion {
    string id = 1;
    string template_id = 2;
    string name = 3;
    Price prices = 4;
    string period = 5;
    string license_sku_id = 6;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp updated_at = 8;
    State state = 9;

    enum State {
        STATE_UNSPECIFIED = 0;
        PENDING = 1;
        ACTIVE = 2;
        DEPRECATED = 3;
        DELETED = 4;
    }
}

message ListTemplateVersionResponse {
    repeated TemplateVersion template_versions = 1;
    string next_page_token = 2;
}
